--- a/1-9.html
+++ b/1-9.html
@@ -5,52 +5,40 @@
     <link rel="stylesheet" href="1-9.css"/>
     <title>1-9演習</title>
   </head>
-</html>
 
-<body>
+ <body>
   <header></header>
 
   <main>
     <div class="work">
-      <div class="work-image1">
+      <div class="work-image1"></div>
         <span class="step">step1</span>
         <h3 class="work-title">タイトルが入ります</h3>
         <p class="work-text">
-          文章が入ります。文章が入ります。文章が入りま<br/>
-          す。文章が入ります。文章が入ります。文章が入り<br/>
-          ます。文章が入ります。文章が入ります。文章が入<br/>
-          ります。
+          文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
         </p>
-      </div>
     </div>
 
     <div class="work">
-      <div class="work-image2">
+      <div class="work-image2"></div>
       <span class="step">step2</span>
       <h3 class="work-title">タイトルが入ります</h3>
       <p class="work-text">
-        文章が入ります。文章が入ります。文章が入りま<br/>
-        す。文章が入ります。文章が入ります。文章が入り<br/>
-        ます。文章が入ります。文章が入ります。文章が入<br/>
-        ります。
+        文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
       </p>
-      </div>
     </div>
 
     <div class="work">
-      <div class="work-image3">
+      <div class="work-image3"></div>
         <span class="step">step3</span>
         <h3 class="work-title">タイトルが入ります</h3>
         <p class="work-text">
-          文章が入ります。文章が入ります。文章が入りま<br/>
-          す。文章が入ります。文章が入ります。文章が入り<br/>
-          ます。文章が入ります。文章が入ります。文章が入<br/>
-          ります。
+          文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
         </p>
-      </div>
     </div>
   </main>
 
   <footer>
   </footer>
-</body>
+ </body>
+</html>
